# fastai_course

./: 00-is-it-a-bird-creating-a-model-from-your-own-data.ipynb  05-linear-model-and-neural-net-from-scratch.ipynb  07-how-random-forests-really-work.ipynb  CLAUDE.md  main.py  pyproject.toml
.claude/: settings.local.json
