[project]
name = "fastai-course"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastai",
    "duckduckgo_search",
    "ipykernel",
    "pexpect",
    "matplotlib-inline",
    "ddgs",
    "kaggle",
    "pandas",
    "numpy",
    "seaborn",
    "matplotlib",
    "ipywidgets",
    "widgetsnbextension",
    "graphviz",
    "sympy"
    
]
